# gvoice-secret-dump

./: .gitignore  README.md  requirements.txt  setup.cfg
src/: secret_dump.py
src/gvoicesecretdump/secrets/: gvoice_secret.py
src/secrets/: gvoice_secret.py
