[metadata]
name = gvoicesecretdump
version = 1.0.0
author = Erik Tyryshkin
description = Selenium-based Python3.7 cookie and API key dump for Google Voice service. Utilized for accessing the internal Google Voice API. 
long_description = file: README.md
url = https://github.com/kingcobra2468/gvoice-secret-dump
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.7
install_requires =
    selenium==4.1.0
    undetected-chromedriver==3.1.2

[options.packages.find]
where = src
